using System.Collections.Generic;
using Runtime.Scriptable;

namespace Runtime.Domain
{
    public class Card
    {
        private List<Trait> _traits;

        public Card(CardConfig traits)
        {
        }
    }
}