@startuml

entity Utopify
entity Player
entity Deck
entity Hand
entity Card
entity Character
entity Terrain
entity Trait
entity Board
entity Square
entity Connection
{
    positive
    negative
    neutral
}

entity Happiness
entity Milestone

Utopify *--> Player
Player *--> Deck
Player *--> Hand
Player --> "*" PutCard
Hand --> Deck
Hand o--> "*" Card
Deck o--> "*" Card
Card o--> "1..3" Trait
Card <|-- Character
Card <|-- Terrain

Player *--> Happiness

Utopify *--> Board
Board o--> "*" Square
Board o--> "*" Connection
Square o--> "0..1" Card
Connection *--> "2" Square
Connection *--> Happiness

PutCard --> Board
PutCard ..> Card

Utopify *--> "*" Milestone
Milestone --> Happiness
Milestone --> Deck
Milestone ..> "*" Card 

@enduml